--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,9 @@
-remote_theme: pages-themes/midnight@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
 
 title: Flight and Critical Care Paramedic Program
-description: Comprehensive Course Materials, Resources, and Outline
+description: Comprehensive Course Materials and Resources
 show_downloads: false
 
-# Customize these as needed
-github:
-  is_project_page: false
-
-# You can add more custom variables here
+# You can add more custom variables here if needed
