--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
 
-title: Flight and Critical Care Paramedic Program
-description: Comprehensive Course Materials and Resources
+title: VPCC Flight and Critical Care Paramedic Program
+description: Comprehensive Course Materials, Outline, and Resources
 show_downloads: false
